# stack_main

./: Cargo.toml  README.md  build.sh  deny.toml  deploy.sh
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.PartialEq.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/iter/traits/iterator/: trait.Iterator.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/ops/drop/: trait.Drop.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/implementors/ll_stack/: trait.Iterators.js
docs/implementors/stack_trait/: trait.Stack.js
docs/ll_stack/: all.html  index.html  sidebar-items.js  struct.GenericStack.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  trait.Iterators.html  trait.Stack.html
docs/src/ll_stack/: lib.rs.html
docs/src/stack_main/: main.rs.html
docs/src/stack_trait/: lib.rs.html
docs/stack_main/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Du64.html
docs/stack_trait/: index.html  trait.Stack.html
src/: main.rs
