[package]
name = "stack_main"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stack_trait = {version = "*", git = "https://github.com/IntroductionToRust/stack_trait" }
ll_stack = {version = "*", git = "https://github.com/IntroductionToRust/ll_stack" }
